# pyroll-neutral-point-estimator

./: .gitignore  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  kunzmann_neutral_plane.dxf  refs.bib
docs/img/: kunzmann_neutral_plane.dxf
pyroll/neutral_point_estimator/: __init__.py  equal_neutral_line_estimator.py  ford_ellis_bland_neutral_line_estimator.py  lichansky_polyakov_ribbed_profile_neutral_point.py  napatov_ribbed_profile_neutral_point.py  osborn_neutral_point_estimator.py  siebel_neutral_point_estimator.py  sims_neutral_point_estimator.py  utils.py
test/: test_solve_equal.py  test_solve_equal3.py  test_solve_feb.py  test_solve_feb3.py  test_solve_lichansky.py  test_solve_napatov.py  test_solve_osborn.py  test_solve_osborn3.py  test_solve_siebel.py  test_solve_siebel3.py  test_solve_sims.py  test_solve_sims3.py
